--- a/examples/browser/index.html
+++ b/examples/browser/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>My RawJS Webpage</title>
+	<link rel="stylesheet" href="./assets/style.css">
   </head>
 
   <body>
